fixed input gap

--- a/sass/components/_cta-form.scss
+++ b/sass/components/_cta-form.scss
@@ -20,7 +20,7 @@
 
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-    column-gap: 2rem;
+    gap: 2rem;
   }
 
   &__input {
